Aligned items correctly. Fixed sidebar issue.

--- a/react-app/src/components/Item.module.css
+++ b/react-app/src/components/Item.module.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .item__icon {
